--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
         </ul>
-        <ul></ul>
+        <ul>halo</ul>
       </nav>
     </header>
   </body>
