--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <ul></ul>
         <ul>
           <li><a href="./index.html">Home</a></li>
+          <h1>halo</h1>
           <li><a href="./about.html">About</a></li>
         </ul>
-        <ul>halo</ul>
+        <ul></ul>
       </nav>
     </header>
   </body>
