--- a/about.html
+++ b/about.html
@@ -28,11 +28,19 @@
         Deskripsi Singkat
       </p>
       <p>
+        Halo saya Feisal LH dari SMK BPPI BALEENDAH, kebiasaan saya sehari hari adalah bermain game namun terkadang
+        menonton film, film yg saya suka yaitu anime atau movie hhe:D
+      </p>
+      <p>
         Posisi sekarang
+      </p>  
+      <p>  
+        saya disini sebagai pelajar
       </p>
 
       <h2>Project Yang Telah Dibuat</h2>
       <p>
+        Auto NGINX Deploy
       </p>
 
       <h2>Contact</h2>
