--- a/about.html
+++ b/about.html
@@ -32,9 +32,6 @@
         menonton film, film yg saya suka yaitu anime atau movie hhe:D
       </p>
       <p>
-        Posisi sekarang
-      </p>  
-      <p>  
         saya disini sebagai pelajar
       </p>
 
@@ -45,6 +42,8 @@
 
       <h2>Contact</h2>
       <p>
+        ig <a href="https://www.instagram.com/feisallukman2202/">feisallukman2202</a>
+        wa : 089503950548
       </p>
     </main>
 
